platform icon fixed in tactics, date indicator text overlap fixed

--- a/app/assets/stylesheets/campaign_details.css.scss
+++ b/app/assets/stylesheets/campaign_details.css.scss
@@ -425,6 +425,10 @@
               color: #727272;
               margin-top: 40px;
               font-size: 14px;
+              img {
+                display: inline-block;
+                margin-right: 5px ;
+              }
             }
             .tactic_accordion_details {
               margin-bottom: 10px;
