--- a/app/assets/stylesheets/campaign_list.css.scss
+++ b/app/assets/stylesheets/campaign_list.css.scss
@@ -2332,6 +2332,7 @@ button, i, input[type="submit"] {
         
         font-size: 12px;
         right: -35px;
+        white-space: nowrap;
       }
       .ended_text {
         right : 0px ;
